--- a/static/bower.json
+++ b/static/bower.json
@@ -47,6 +47,7 @@
     "textarea-autosize": "~0.3.0",
     "tinymce": "~4.2.5",
     "vanilla-lazyload": "~1.5.7",
-    "remarkable-bootstrap-notify": "~3.1.3"
+    "remarkable-bootstrap-notify": "~3.1.3",
+    "Sortable": "sortable.js#^1.4.2"
   }
 }
