--- a/static/bower.json
+++ b/static/bower.json
@@ -14,40 +14,40 @@
     "tests"
   ],
   "dependencies": {
-    "ace-builds": "~1.1.9",
-    "jquery.attrajax": "~0.1",
-    "bootstrap": "~3.3.4",
-    "bootstrap-datepicker": "~1.3.0",
-    "bootstrap-fileinput": "~4.1.7",
-    "bootstrap-multiselect": "~0.9.6",
+    "ace-builds": "^1.1.9",
+    "bootstrap": "^3.3.7",
+    "bootstrap-datepicker": "^1.3.1",
+    "bootstrap-fileinput": "^4.1.9",
+    "bootstrap-multiselect": "^0.9.13",
     "ckeditor": "#full/4.4.7",
-    "datatables": "~1.10.1",
-    "ekko-lightbox": "~3.3.0",
-    "eonasdan-bootstrap-datetimepicker": "~4.17.37",
-    "jquery": "~2.1.3",
-    "jquery-file-upload": "~9.10.5",
-    "jquery-form": "~3",
-    "jquery-highlight": "~3.2.2",
-    "jquery-iframe-auto-height": "~2.0.0",
-    "jquery-resizable-columns": "~0.1.3",
-    "jquery-ui": "~1.11.4",
-    "jquery.browser": "~0.0.8",
-    "jquery.cookie": "~1.4.1",
+    "datatables": "^1.10.12",
+    "ekko-lightbox": "^3.3.3",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37",
+    "jquery": "^2.1.4",
+    "jquery-file-upload": "^9.10.7",
+    "jquery-form": "^3.46.0",
+    "jquery-highlight": "^3.2.2",
+    "jquery-iframe-auto-height": "^2.0.0",
+    "jquery-resizable-columns": "^0.1.3",
+    "jquery-ui": "^1.12.0",
+    "jquery.attrajax": "^0.1.4",
+    "jquery.browser": "^0.1.0",
+    "jquery.cookie": "^1.4.1",
     "json2": "*",
-    "magnific-popup": "~1.0.0",
-    "markitup-1x": "~1.1.14",
-    "moment": "~2.9.0",
-    "raven-js": "~1.1.18",
-    "requirejs": "~2.1.15",
-    "select2": "~3.5.2",
-    "select2-bootstrap-css": "~1.4.4",
-    "spin.js": "~2.0.2",
-    "StickyTableHeaders": "~0.1.12",
-    "store-js": "~1.3.16",
-    "textarea-autosize": "~0.3.0",
-    "tinymce": "~4.2.5",
-    "vanilla-lazyload": "~1.5.7",
-    "remarkable-bootstrap-notify": "~3.1.3",
-    "Sortable": "sortable.js#^1.4.2"
+    "magnific-popup": "^1.0.1",
+    "markitup-1x": "^1.1.14",
+    "moment": "^2.14.1",
+    "raven-js": "^3.4.0",
+    "remarkable-bootstrap-notify": "^3.1.3",
+    "requirejs": "^2.1.22",
+    "select2": "^3.5.4",
+    "select2-bootstrap-css": "^1.4.6",
+    "Sortable": "sortable.js#^1.4.2",
+    "spin.js": "^2.0.2",
+    "StickyTableHeaders": "^0.1.19",
+    "store-js": "^1.3.20",
+    "textarea-autosize": "^0.3.0",
+    "tinymce": "^4.2.8",
+    "vanilla-lazyload": "^1.6.0"
   }
 }
