--- a/static/bower.json
+++ b/static/bower.json
@@ -17,7 +17,7 @@
     "ace-builds": "^1.1.9",
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.3.1",
-    "bootstrap-fileinput": "^4.1.9",
+    "bootstrap-fileinput": "#4.3.2",
     "bootstrap-multiselect": "^0.9.13",
     "ckeditor": "#full/4.4.7",
     "datatables": "^1.10.12",
