--- a/static/package.json
+++ b/static/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "select2": "^4.0.3"
   },
   "devDependencies": {
