팀별로 cms 를 require 해서 사용할 수 있도록 composer 패키지화  - bootstrap_cms.php 는 사용하지 않음

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
     "name": "ridibooks/platform-cms",
     "description": "Ridibooks CMS framework",
-    "require": {
-        "gnf/gnfcache": "^0.1.0",
-        "illuminate/database": "^5.2"
-    },
+    "license": "MIT",
     "authors": [
         {
             "name": "김범준",
@@ -18,5 +15,14 @@
             "name": "이영규",
             "email": "younggyu.lee@ridi.com"
         }
-    ]
+    ],
+    "require": {
+        "gnf/gnfcache": "^0.1.0",
+        "illuminate/database": "^5.2"
+    },
+    "autoload": {
+        "psr-0": {
+            "Ridibooks\\": "src/"
+        }
+    }
 }
