autoload 와 동시에 bootstrap.php 파일이 실행되도록

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ridibooks/platform-cms",
-    "description": "Ridibooks CMS framework",
+    "description": "Ridibooks CMS SDK",
     "license": "MIT",
     "authors": [
         {
@@ -23,6 +23,9 @@
     "autoload": {
         "psr-0": {
             "Ridibooks\\": "src/"
-        }
+        },
+        "files": [
+            "bootstrap.php"
+        ]
     }
 }
