composer package 버전 지정

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "ridibooks/platform-cms",
+    "version": "0.1",
     "description": "Ridibooks CMS SDK",
     "license": "MIT",
     "authors": [
