--- a/static/package.json
+++ b/static/package.json
@@ -20,6 +20,7 @@
     "webpack": "^1.13.2"
   },
   "scripts": {
+    "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
