--- a/static/package.json
+++ b/static/package.json
@@ -14,13 +14,15 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.24.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   },
   "scripts": {
-    "build": "webpack -p",
+    "debug": "webpack -d --progress --watch",
+    "build": "webpack -p --define process.env.NODE_ENV=\"'production'\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
