어드민 관리 기능들 super 하위로 이동 (추후 분리를 위해)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea
 composer.lock
 static/bower_components
-static/dist
-static/elm-stuff
-static/node_modules
+super/static/elm-stuff
+super/static/dist
+super/static/node_modules
 vendor
