--- a/super/static/package.json
+++ b/super/static/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "select2": "^4.0.3"
