--- a/static/bower.json
+++ b/static/bower.json
@@ -47,6 +47,7 @@
     "store-js": "^1.3.20",
     "textarea-autosize": "^0.3.0",
     "tinymce": "^4.2.8",
-    "vanilla-lazyload": "^1.6.0"
+    "vanilla-lazyload": "^1.6.0",
+    "handlebars": "^4.0.5"
   }
 }
