[sdk] bower로 js/css 설치 가능하도록 수정

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "ridibooks-cms-static",
+  "name": "ridibooks-cms",
   "license": "MIT",
   "private": true,
   "ignore": [
     "**/.*",
-    "*.php",
-    "*.twig",
+    "/src",
+    "/views",
     "node_modules",
     "bower_components",
     "test",
