--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   ],
   "require": {
     "gnf/gnfcache": "^0.1.0",
-    "illuminate/database": "^5.2"
+    "illuminate/database": "^5.2",
+    "silex/silex": "^1.3"
   },
   "autoload": {
     "psr-4": {
