silex 가 중복으로 많이 배포되는 것을 피하기 위해, require-dev 하위로 옮김

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
   ],
   "require": {
     "gnf/gnfcache": "^0.1.0",
-    "illuminate/database": "^5.2",
+    "illuminate/database": "^5.2"
+  },
+  "require-dev": {
     "silex/silex": "^1.3"
   },
   "autoload": {
