--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ridibooks/platform-cms",
+  "name": "ridibooks/cms",
   "description": "Ridibooks CMS SDK",
   "license": "MIT",
   "authors": [
@@ -14,6 +14,10 @@
     {
       "name": "이영규",
       "email": "younggyu.lee@ridi.com"
+    },
+    {
+      "name": "강기태",
+      "email": "kt.kang@ridi.com"
     }
   ],
   "require": {
