Config 의존성 정리 (BC Break)  - ENABLE_SSL, COUCHBASE_ENABLE, COUCHBASE_SERVER_HOSTS

--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,20 @@
       "email": "kt.kang@ridi.com"
     }
   ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@gitlab.ridi.io:common/php-core.git"
+    }
+  ],
   "require": {
     "gnf/gnfcache": "^0.1.0",
     "illuminate/database": "^5.2"
   },
   "require-dev": {
-    "silex/silex": "^1.3"
+    "ridibooks/core": "dev-master",
+    "silex/silex": "^1.3",
+    "twig/twig": "^1.0.0"
   },
   "autoload": {
     "psr-4": {
