디렉토리 구조 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 .idea
+server/vender
+server/static/bower_components
+server/composer.lock
 composer.lock
-static/bower_components
 vendor
-src/Cms/Thrift/*
-!src/Cms/Thrift/ThriftService.php
-src/CmsServer/Thrift/*
-!src/CmsServer/Thrift/ThriftResponse.php
-thrift/docs
-thrift/dist-gen
+Thrift/src/*
+!Thrift/src/ThriftService.php
+!Thrift/src/ThriftResponse.php
+Thrift/docs
+Thrift/dist-gen
