--- a/server/.env.template
+++ b/server/.env.template
@@ -1,6 +1,13 @@
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+
 AZURE_TENENT=
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
 AZURE_RESOURCE=
 AZURE_REDIRECT_URI=
 AZURE_API_VERSION=
+
+LOGIN_ENCRYPT_KEY=
