Update gitignore and docutment about thrift.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 .idea
+.env
+config.local.php
 server/vender
 server/static/bower_components
 server/composer.lock
 composer.lock
 vendor
 Thrift/src/*
-!Thrift/src/ThriftService.php
 !Thrift/src/ThriftResponse.php
+!Thrift/src/ThriftService.php
 Thrift/docs
 Thrift/dist-gen
