* Add Couchbase session option * Rename ‘login.cms’ to ‘login-cms’

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+DEBUG=
+
 MYSQL_HOST=
 MYSQL_USER=
 MYSQL_PASSWORD=
@@ -10,4 +12,4 @@ AZURE_RESOURCE=
 AZURE_REDIRECT_URI=
 AZURE_API_VERSION=
 
-LOGIN_ENCRYPT_KEY=
+COUCHBASE_HOST=
