--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "twig/twig": "^2.0.0",
     "ridibooks/cms-sdk": "dev-master",
     "ridibooks/core": "dev-master",
-    "sentry/sentry": "^1.6"
+    "sentry/sentry": "^1.6",
+    "moriony/silex-sentry-provider": "~2.0.0"
   },
   "autoload": {
     "psr-4": {
