Check thrift rpc request with accept header, and set redirection disabled.

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@
 RewriteEngine On
 
 RewriteCond %{HTTPS} off
+RewriteCond %{HTTP:Accept} !application/x-thrift [NC]
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
