Remove https redirect in htaccess.

--- a/.htaccess
+++ b/.htaccess
@@ -2,9 +2,9 @@
 
 RewriteEngine On
 
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP:Accept} !application/x-thrift [NC]
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+#RewriteCond %{HTTPS} off
+#RewriteCond %{HTTP:Accept} !application/x-thrift [NC]
+#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*) https://%1/$1 [R=301,L]
