Set cms-sdk dev version for test

--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,16 @@
       "email": "kt.kang@ridi.com"
     }
   ],
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@gitlab.ridi.io:common/php-core.git"
-    }
-  ],
   "require": {
     "illuminate/database": "^5.2",
     "vlucas/phpdotenv": "^2.4",
     "silex/silex": "^2.0",
     "twig/twig": "^2.0.0",
-    "ridibooks/cms-sdk": "^1.0.0",
-    "ridibooks/core": "dev-master",
     "sentry/sentry": "^1.6",
     "moriony/silex-sentry-provider": "~2.0.0"
+  },
+  "require-dev": {
+    "ridibooks/cms-sdk": "dev-fix/replace_ridibooks_library"
   },
   "autoload": {
     "psr-4": {
