--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "twig/twig": "^2.0.0",
     "sentry/sentry": "^1.6",
     "moriony/silex-sentry-provider": "~2.0.0",
-    "ridibooks/cms-sdk": "^1.0.0"
+    "ridibooks/cms-sdk": "^1.0.0",
+    "jguyomard/silex-capsule-eloquent": "^2.0"
   },
   "autoload": {
     "psr-4": {
