Restruct directories in form of Silex convention.

--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,6 @@ RewriteCond %{REQUEST_URI} !=/server-status
 RewriteCond %{REQUEST_URI} !.*\.(woff|ttf|svg|js|ico|bmp|gif|jpg|jpeg|png|css|htc|xml|txt|xls|csv|ppt|pdf|doc|docx)
 RewriteCond %{SCRIPT_FILENAME} !-f
 RewriteCond %{SCRIPT_FILENAME} !-d
-RewriteRule (.*) index.php?$0 [QSA,L]
+RewriteRule (.*) web/index.php?$0 [QSA,L]
 
 </IfModule>
