--- a/phinx.yml
+++ b/phinx.yml
@@ -1,6 +1,6 @@
 paths:
-    migrations: '%%PHINX_CONFIG_DIR%%/docs/phinx/migrations'
-    seeds: '%%PHINX_CONFIG_DIR%%/docs/phinx/seeds'
+    migrations: '%%PHINX_CONFIG_DIR%%/phinx/migrations'
+    seeds: '%%PHINX_CONFIG_DIR%%/phinx/seeds'
 
 environments:
     default_migration_table: phinxlog
