--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "sentry/sentry": "^1.6",
     "silex/silex": "^2.0",
     "twig/twig": "^2.0.0",
-    "vlucas/phpdotenv": "^2.4"
+    "vlucas/phpdotenv": "^2.4",
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
     "robmorgan/phinx": "^0.9.2",
