Append single quotes to environment variables in phinx.yml, and change localhost to 127.0.0.1 in .env of test

--- a/tests/.env
+++ b/tests/.env
@@ -1,10 +1,8 @@
-DEBUG=0
+DEBUG=1
 TEST_ID=
-CMS_RPC_URL=http://localhost
+CMS_RPC_URL=http://127.0.0.1
 
-MYSQL_HOST=localhost
+MYSQL_HOST=127.0.0.1
 MYSQL_DATABASE=cms
 MYSQL_USER=root
 MYSQL_PASSWORD=
-
-DOMAIN=localhost
