--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "silex/silex": "^2.0",
     "twig/twig": "^2.0.0",
     "vlucas/phpdotenv": "^2.4",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "monolog/monolog": "^1.23"
   },
   "require-dev": {
     "robmorgan/phinx": "^0.9.2",
