Add thrift repositoy and update composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
   "description": "Ridibooks CMS Server Aplication",
   "type": "project",
   "license": "MIT",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/apache/thrift.git"
+    }
+  ],
   "require": {
     "illuminate/database": "^5.2",
     "jguyomard/silex-capsule-eloquent": "^2.0",
