--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "illuminate/database": "^5.2",
     "jguyomard/silex-capsule-eloquent": "^2.0",
     "moriony/silex-sentry-provider": "~2.0.0",
-    "ridibooks/cms-sdk": "^2.2.0",
+    "ridibooks/cms-sdk": "2.3.0-rc.1",
     "sentry/sentry": "^1.6",
     "silex/silex": "^2.0",
     "twig/twig": "^2.0.0",
@@ -25,6 +25,8 @@
     "robmorgan/phinx": "^0.9.2",
     "phpunit/phpunit": "^6.5"
   },
+  "minimum-stability": "RC",
+  "prefer-stable" : true,
   "autoload": {
     "psr-4": {
       "Ridibooks\\Cms\\": "src"
