--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,6 @@
   "description": "Ridibooks CMS Server Aplication",
   "type": "project",
   "license": "MIT",
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/apache/thrift.git"
-    }
-  ],
   "require": {
     "illuminate/database": "^5.2",
     "jguyomard/silex-capsule-eloquent": "^2.0",
@@ -19,7 +13,8 @@
     "twig/twig": "^2.0.0",
     "vlucas/phpdotenv": "^2.4",
     "guzzlehttp/guzzle": "^6.3",
-    "monolog/monolog": "^1.23"
+    "monolog/monolog": "^1.23",
+    "thenetworg/oauth2-azure": "dev-master#d7c25245b1d185a01b497318a094bfe128de786c"
   },
   "require-dev": {
     "robmorgan/phinx": "^0.9.2",
