--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,13 @@
     "psr-4": {
       "Ridibooks\\Cms\\": "src"
     }
+  },
+  "scripts": {
+    "test": "phpunit",
+    "clear": "rm -rf vendor"
+  },
+  "require-dev": {
+    "robmorgan/phinx": "^0.9.2",
+    "phpunit/phpunit": "^7.1"
   }
 }
