Add environment variables AUTH_USE_TEST and AUTH_USE_PASSWORD

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,13 @@
 DEBUG=
+SENTRY_KEY=
+
 TEST_ID=
 TEST_SECURED_DISABLE=
 TEST_AUTH_DISABLE=
+
+AUTH_USE_TEST=
+AUTH_USE_PASSWORD=
+
 CMS_RPC_URL=
 
 MYSQL_HOST=
