--- a/tests/.env
+++ b/tests/.env
@@ -3,6 +3,8 @@ TEST_ID=
 TEST_SECURED_DISABLE=1
 TEST_AUTH_DISABLE=
 CMS_RPC_URL=http://127.0.0.1
+AZURE_RESOURCE=
+SENTRY_KEY=
 
 MYSQL_HOST=127.0.0.1
 MYSQL_DATABASE=cms
