--- a/tests/.env
+++ b/tests/.env
@@ -6,7 +6,7 @@ CMS_RPC_URL=http://127.0.0.1
 AZURE_RESOURCE=
 SENTRY_KEY=
 
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST=host.docker.internal
 MYSQL_DATABASE=cms
 MYSQL_USER=root
 MYSQL_PASSWORD=
