--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ before_install:
 
 script:
   - make build
-  - make test
+  - make up
+  - bin/setup.sh
+  - sleep 30s; make test
 
 deploy:
   # Push Docker image
