--- a/.env.docker
+++ b/.env.docker
@@ -10,7 +10,7 @@ AUTH_USE_PASSWORD=1
 
 CMS_RPC_URL=localhost
 
-MYSQL_HOST=host.docker.internal
+MYSQL_HOST=db
 MYSQL_DATABASE=cms
 MYSQL_USER=root
 MYSQL_PASSWORD=
