--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,30 @@
 version: '3.6'
 
 services:
+  builder:
+    image: ${LOCAL_DOCKER_REPO}-builder:${LOCAL_DOCKER_TAG}
+    build:
+      context: .
+      target: builder
+    volumes:
+      - .:/builder
+    entrypoint: ["composer", "install", "--optimize-autoloader", "--ignore-platform-reqs"]
+
   web:
     image: ${LOCAL_DOCKER_REPO}:${LOCAL_DOCKER_TAG}
+    build:
+      context: .
     volumes:
       - .:/var/www/html
     ports:
       - ${WEB_PORT:-80}:80
     env_file:
-      - .env.local
+      - .env.docker
+    environment:
+      PHINX_DBHOST: db
+    depends_on:
+      - builder
+      - db
 
   db:
     image: mariadb:10.3
