--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,36 @@
 version: '3.6'
 
 services:
+  web:
+    image: ${LOCAL_DOCKER_REPO}:${LOCAL_DOCKER_TAG}
+    build:
+      context: .
+    ports:
+      - ${WEB_PORT:-80}:80
+    env_file:
+      - .env.docker
+    volumes:
+      - .:/var/www/html
+    depends_on:
+      - builder
+
   builder:
     image: ${LOCAL_DOCKER_REPO}-builder:${LOCAL_DOCKER_TAG}
     build:
       context: .
       target: builder
+    command: ["build", "dev"]
     volumes:
-      - .:/builder
-    entrypoint: ["composer", "install", "--optimize-autoloader", "--ignore-platform-reqs"]
-
-  web:
-    image: ${LOCAL_DOCKER_REPO}:${LOCAL_DOCKER_TAG}
-    build:
-      context: .
-    volumes:
-      - .:/var/www/html
-    ports:
-      - ${WEB_PORT:-80}:80
-    env_file:
-      - .env.docker
-    environment:
-      PHINX_DBHOST: db
+      - .:/build
     depends_on:
-      - builder
       - db
 
   db:
     image: mariadb:10.3
     ports:
       - ${DB_PORT:-3306}:3306
-    volumes:
-      - ./db/data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: cms
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    volumes:
+      - ./db/data:/var/lib/mysql
