Add .sh extention to shell scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     build:
       context: .
       target: builder
-    command: ["build", "dev"]
+    command: ["build.sh", "dev"]
     volumes:
       - .:/build
     depends_on:
