--- a/.env.docker
+++ b/.env.docker
@@ -1,12 +1,16 @@
 DEBUG=1
+SENTRY_KEY=
+
 TEST_ID=
 TEST_SECURED_DISABLE=1
 TEST_AUTH_DISABLE=
-CMS_RPC_URL=http://127.0.0.1
-AZURE_RESOURCE=
-SENTRY_KEY=
 
-MYSQL_HOST=127.0.0.1
+AUTH_USE_TEST=1
+AUTH_USE_PASSWORD=1
+
+CMS_RPC_URL=localhost
+
+MYSQL_HOST=db
 MYSQL_DATABASE=cms
 MYSQL_USER=root
 MYSQL_PASSWORD=
