Fix the bug that doesn't push a image while deploying on dev branch (2)

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ after_scipt:
 deploy:
   # Trigger deploying CI pipeline (dev)
   - provider: script
-    script: make push && make deploy-dev
+    script: make push-dev && make deploy-dev
     on:
       branch: 2.x
 
