Changes a modules to headers.c

--- a/config/apache2/security.conf
+++ b/config/apache2/security.conf
@@ -3,7 +3,7 @@ ServerSignature Off
 TraceEnable Off
 
 
-<IfModule mod_deflate.c>
+<IfModule mod_headers.c>
   Header set Content-Security-Policy "default-src 'self';"
   Header set Strict-Transport-Security "max-age=15768000; includeSubdomains"
   Header set X-XSS-Protection "1; mode=block"
