--- a/.travis.yml
+++ b/.travis.yml
@@ -22,21 +22,14 @@ before_install:
 
 script:
   - make build
-  - make up
-  - echo "Wait for DB start and building.."; sleep 60s
-  - make db
-  - echo "Wait for applying DB schema change.."; sleep 3s
-  - make test
-
-after_scipt:
-  - make down
 
 deploy:
   # Trigger deploying CI pipeline (dev)
   - provider: script
-    script: make push-dev && make deploy-dev
+    script: make push-dev
     on:
-      branch: 2.x
+      all_branches: true
+      tags: false
 
   # Trigger deploying CI pipeline (prod)
   - provider: script
