Use Cloudflare Access for authorization (#99)
* Add Cloudflare Authenticator

* Refactor url generator

* Add instant auth option for cloudflare auth

* Fix broken test

* Fix admin id cookie

* Update .env.template

* Run phpcs fix

* Push dev

* Revert ci fix

* Refactor twig param generation

* Fix qoute inconsistency

* Update cms-sdk with v3.0.0

* Fix param type error at authorizeAdminByUrl

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,10 @@ after_scipt:
 deploy:
   # Trigger deploying CI pipeline (dev)
   - provider: script
-    script: make push-dev && make deploy-dev
+    script: make push-dev
     on:
-      branch: 2.x
+      all_branches: true
+      tags: false
 
   # Trigger deploying CI pipeline (prod)
   - provider: script
