--- a/.env.template
+++ b/.env.template
@@ -6,8 +6,10 @@ TEST_SECURED_DISABLE=
 TEST_AUTH_DISABLE=
 
 AUTH_USE_TEST=
+INSTANT_AUTH=
 
 CMS_RPC_URL=
+CMS_HOST=
 
 MYSQL_HOST=
 MYSQL_DATABASE=
