Inject admin id to CmsApplication

--- a/.env.template
+++ b/.env.template
@@ -9,7 +9,9 @@ AUTH_USE_TEST=
 INSTANT_AUTH=
 
 CMS_RPC_URL=
-CMS_HOST=
+CMS_RPC_SECRET=
+CF_ACCESS_DOMAIN=
+CF_AUDIENCE_TAG=
 
 MYSQL_HOST=
 MYSQL_DATABASE=
