--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "vlucas/phpdotenv": "^2.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5",
-    "robmorgan/phinx": "^0.10"
+    "robmorgan/phinx": "^0.10",
+    "phpunit/phpunit": "^7"
   },
   "minimum-stability": "RC",
   "prefer-stable" : true,
