Set Github Actions

--- a/.env.docker
+++ b/.env.docker
@@ -2,7 +2,7 @@ XDEBUG_ENABLE=1
 XDEBUG_HOST=host.docker.internal
 
 DEBUG=1
-SENTRY_KEY=
+SENTRY_DSN=
 
 TEST_ID=
 TEST_SECURED_DISABLE=1
@@ -12,7 +12,7 @@ AUTH_USE_TEST=1
 
 CMS_RPC_URL=localhost
 
-MYSQL_HOST=db
-MYSQL_DATABASE=cms
-MYSQL_USER=root
-MYSQL_PASSWORD=
+DB_HOST=db
+DB_DATABASE=cms
+DB_USER=root
+DB_PASSWORD=
