--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 DEBUG=
-SENTRY_KEY=
+SENTRY_DSN=
 
 TEST_ID=
 TEST_SECURED_DISABLE=
@@ -13,9 +13,9 @@ CMS_RPC_SECRET=
 CF_ACCESS_DOMAIN=
 CF_AUDIENCE_TAG=
 
-MYSQL_HOST=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+DB_HOST=
+DB_DATABASE=
+DB_USER=
+DB_PASSWORD=
 
 DOMAIN=
