--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.3.1",
     "bootstrap-fileinput": "^4.3.5",
-    "bootstrap-multiselect": "^0.9.13",
+    "bootstrap-multiselect": "0.9.15",
     "ckeditor": "#full/4.4.7",
     "datatables": "^1.10.12",
     "ekko-lightbox": "^3.3.3",
