--- a/.github/workflows/cms-proxy.dev.yml
+++ b/.github/workflows/cms-proxy.dev.yml
@@ -43,6 +43,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: proxy/Dockerfile
           target: dev
           tags: ${{ steps.login-ecr.outputs.registry }}/cms-proxy:commit-${{ github.sha }}, ${{ steps.login-ecr.outputs.registry }}/cms-proxy:latest
           push: true
