--- a/.github/workflows/cms-proxy.prod.yml
+++ b/.github/workflows/cms-proxy.prod.yml
@@ -44,6 +44,7 @@ jobs:
         with:
           context: .
           tags: ${{ steps.login-ecr.outputs.registry }}/cms-proxy:commit-${{ github.sha }}, ${{ steps.login-ecr.outputs.registry }}/cms-proxy:latest
+          file: proxy/Dockerfile
           push: true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
