store admin 백엔드 비활성화

--- a/proxy/haproxy.dev.cfg
+++ b/proxy/haproxy.dev.cfg
@@ -36,8 +36,8 @@ frontend http
     acl is_platform path_beg -i /admin /finance /platform-operation
     use_backend platform if is_platform
 
-    acl is_store path_beg /store-operation /cs
-    use_backend store if is_store
+    #acl is_store path_beg /store-operation /cs
+    #use_backend store if is_store
 
     acl is_crm path_beg /crm
     use_backend crm if is_crm
@@ -55,9 +55,9 @@ backend platform
     http-request set-header Host admin-staging.ridibooks.com
     server platform admin-staging.ridibooks.com:443 resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
 
-backend store
-    http-request set-header Host admin.dev.ridi.io
-    server store admin.dev.ridi.io:443 resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
+#backend store
+#    http-request set-header Host admin.dev.ridi.io
+#    server store admin.dev.ridi.io:443 resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
 
 backend crm
     http-request set-header Host crm-cms.dev.ridi.io
