haproxy 설정 파일을 action 실행 조건에 추가

--- a/.github/workflows/cms-proxy.dev.yml
+++ b/.github/workflows/cms-proxy.dev.yml
@@ -4,6 +4,7 @@ on:
       - 3.x
     paths:
       - .github/workflows/cms-proxy.dev.yml
+      - proxy/haproxy.dev.cfg
       - proxy/Dockerfile
 
 name: Deploy cms-proxy to Amazon ECS (dev)
