--- a/.github/workflows/cms-proxy.prod.yml
+++ b/.github/workflows/cms-proxy.prod.yml
@@ -4,6 +4,7 @@ on:
       - 3.x
     paths:
       - .github/workflows/cms-proxy.dev.yml
+      - proxy/haproxy.prod.cfg
       - proxy/Dockerfile
 
 name: Deploy cms-proxy to Amazon ECS (prod)
