update cms-super host to private dns

--- a/proxy/haproxy.dev.cfg
+++ b/proxy/haproxy.dev.cfg
@@ -69,7 +69,7 @@ backend ridiselect
 
 backend cms_super
     http-request set-header Host cms.ridi.io
-    server cms_super cms-super.ecs.aws:80 resolvers private resolve-prefer ipv4
+    server cms_super cms-super.ridi.dev:80 resolvers private resolve-prefer ipv4
 
 backend cms_auth
     acl blockedagent hdr_beg(user-agent) -i DirBuster
