--- a/proxy/haproxy.prod.cfg
+++ b/proxy/haproxy.prod.cfg
@@ -96,7 +96,7 @@ backend cms_v2
     server cms_v2 ridibooks-cms-1743942204.ap-northeast-2.elb.amazonaws.com:443 check resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
 
 backend cms_super
-    server cms_super cms-super.ridi.zeon:80 check resolvers private resolve-prefer ipv4
+    server cms_super cms-super.ridi.prod:80 check resolvers private resolve-prefer ipv4
 
 backend cms_auth
-    server cms_auth cms-auth.ridi.zone:80 check resolvers private resolve-prefer ipv4
+    server cms_auth cms-auth.ridi.prod:80 check resolvers private resolve-prefer ipv4
