--- a/proxy/haproxy.dev.cfg
+++ b/proxy/haproxy.dev.cfg
@@ -39,11 +39,11 @@ frontend http
     acl is_store path_beg /store-operation /cs
     use_backend store if is_store
 
-    acl is_crm path_beg /crm
-    use_backend crm if is_crm
-
-    acl is_ridiselect path_beg /select
-    use_backend ridiselect if is_ridiselect
+;    acl is_crm path_beg /crm
+;    use_backend crm if is_crm
+;
+;    acl is_ridiselect path_beg /select
+;    use_backend ridiselect if is_ridiselect
 
     acl is_cms_super path_beg /super
     use_backend cms_super if is_cms_super
@@ -58,13 +58,13 @@ backend platform
 backend store
    server store books-backend-admin.ridi.dev:8000 resolvers private resolve-prefer ipv4
 
-backend crm
-    http-request set-header Host crm-cms.dev.ridi.io
-    server crm crm-cms.dev.ridi.io:443 resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
+;backend crm
+;    http-request set-header Host crm-cms.dev.ridi.io
+;    server crm crm-cms.dev.ridi.io:443 resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
 
-backend ridiselect
-    http-request set-header Host select-admin.ridi.io
-    server ridiselect select-admin.ridi.io:443 resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
+;backend ridiselect
+;    http-request set-header Host select-admin.ridi.io
+;    server ridiselect select-admin.ridi.io:443 resolvers public resolve-prefer ipv4 ssl ca-file /etc/ssl/cert.pem
 
 backend cms_super
     http-request set-header Host cms.ridi.io
